syntax = "proto3";

package taucorder.v1;

option go_package = ".";

import "taucorder/v1/common.proto";

// Data Structures
message StashRequest {
    Node node = 1;
    string cid = 2;
    repeated Peer providers = 3;
}

message StashedItems {
    repeated StashedItem items = 2;
}

message StashedItem {
    string cid = 1;
}

// Service
service HoarderService {
    rpc List(Node) returns (stream StashedItem);
    rpc Stash(StashRequest) returns (Empty);
}
